# parallax

./: README.md  build_db.py  gen_variants.py  pyproject.toml  quick_train.py  server.py  sky-train.yaml  train.py
data/classifier/: config.json  model.pt
data/hazard_db/: metadata.json
parallax/: classifier.py  db.py  embed.py  multiscale.py  screen.py  translate.py
web/: package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
